// [Flags] Input status bitmask
enum InputStatusType {
	INPUT_STATUS_INPUT1  = 0x00000001;
	INPUT_STATUS_INPUT2  = 0x00000002;
	INPUT_STATUS_INPUT3  = 0x00000004;
	INPUT_STATUS_INPUT4  = 0x00000008;
	INPUT_STATUS_INPUT5  = 0x00000010;
	INPUT_STATUS_INPUT6  = 0x00000020;
	INPUT_STATUS_INPUT7  = 0x00000040;
	INPUT_STATUS_INPUT8  = 0x00000080;
	INPUT_STATUS_INPUT9  = 0x00000100;
	INPUT_STATUS_INPUT10 = 0x00000200;
	INPUT_STATUS_INPUT11 = 0x00000400;
	INPUT_STATUS_INPUT12 = 0x00000800;
	INPUT_STATUS_INPUT13 = 0x00001000;
	INPUT_STATUS_INPUT14 = 0x00002000;
	INPUT_STATUS_INPUT15 = 0x00004000;
	INPUT_STATUS_INPUT16 = 0x00008000;
}
