// [Flags] Output status
enum OutputStatusType {
	OUTPUT_STATUS_OUTPUT1 = 0x00000001;
	OUTPUT_STATUS_OUTPUT2 = 0x00000002;
	OUTPUT_STATUS_OUTPUT3 = 0x00000004;
	OUTPUT_STATUS_OUTPUT4 = 0x00000008;
	OUTPUT_STATUS_OUTPUT5 = 0x00000010;
	OUTPUT_STATUS_OUTPUT6 = 0x00000020;
	OUTPUT_STATUS_OUTPUT7 = 0x00000040;
	OUTPUT_STATUS_OUTPUT8 = 0x00000080;
}
